--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body, html {
 
 .hero-section {
     background: linear-gradient(var(--overlay), var(--overlay)), 
-                url('https://images.unsplash.com/reserve/91JuTaUSKaMh2yjB1C4A_IMG_9284.jpg?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); 
+                url('https://i.imgur.com/Ju3pqgF.jpeg'); 
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -221,5 +221,6 @@ input:checked + .slider:before { transform: translateX(20px); }
     .main-text h1 { font-size: 3rem; }
     .side-title { display: none; }
 }
+
 
 
